# NPA-RBI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
blueprint/: rbi_npa_project_full_guide.html
datasets/: F2_ECON.xlsx  F3_CRAR.xlsx  F4_GNPA.xlsx  F5_T11.xlsx  F6_T10.xlsx  F7_NPA_MOVEMENT.xlsx  banking_panel.csv  gnpa_clean.csv  macro_annual.csv
frontend/: app.py  client.py
notebooks/: 01_data_prep.ipynb  02_eda.py  03_panel_regression.py  04_xgboost_shap.py  05_stress_test.py
outputs/: ews_dashboard_2025.csv  leading_indicator_validation.csv  regression_summary.csv  stress_test_results.csv
policy_note/: npa_ews_policy_brief.md
src/npa_ews/: __init__.py  api.py  cli.py  config.py  data.py  narrative.py  schemas.py  stress.py  validation.py
src/npa_ews/models/: __init__.py  panel_fe.py  xgb_model.py
tests/: conftest.py  test_api.py  test_baselines.py  test_data.py  test_frontend_client.py  test_narrative.py  test_no_leakage.py  test_panel_fe.py  test_stress.py  test_validation.py
