[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npa-ews"
version = "0.2.0"
description = "RBI NPA Early Warning System (EWS) -- SupTech prototype"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "shap>=0.44",
    "linearmodels>=5.3",
    "openpyxl>=3.1",
    "requests>=2.31",
    "scipy>=1.11",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "httpx>=0.27",
]
frontend = [
    "streamlit>=1.32",
    "plotly>=5.20",
]

[project.scripts]
npa-ews = "npa_ews.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:The set_bad function will be deprecated.*:PendingDeprecationWarning",
    "ignore:The set_over function will be deprecated.*:PendingDeprecationWarning",
    "ignore:The set_under function will be deprecated.*:PendingDeprecationWarning",
    "ignore:Using `httpx` with `starlette.testclient` is deprecated.*:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
